Fix CORS preflight authentication